@@ -1,0 +1,14 @@
+;; This file:
+;;   http://angg.twu.net/eev-current/.dir-locals.el.html
+;;   http://angg.twu.net/eev-current/.dir-locals.el
+;;           (find-angg "eev-current/.dir-locals.el")
+;;                        (find-eev ".dir-locals.el")
+;; Author: Eduardo Ochs <eduardoochs@gmail.com>
+;; Public domain.
+;;
+;; See: (find-eev "eev-kla.el" "intro")
+;;      (find-enode "Directory Variables")
+;;      (find-enode "Directory Variables" "a subdirectory (a string)")
+;;
+(("" . ((nil . ((ee-preferred-c . "eev")))))
+ )
