@@ -1,3 +1,13 @@
+2022-02-24  Eduardo Ochs  <eduardoochs@gmail.com>
+
+	* eev-kla.el: new file.
+
+	* eev-load.el (eev-kla): load "eev-kla.el".
+
+	* .dir-locals.el: new file.
+
+	* eev-edit.el (ee-copy-preceding-tag-to-kill-ring): return str.
+
 2022-02-18  Eduardo Ochs  <eduardoochs@gmail.com>
 
 	* eev-videolinks.el (code-youtubevideo, find-code-youtubevideo)
